--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,13 +46,19 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="398dp"
-        android:layout_height="390dp"
+        android:layout_width="189dp"
+        android:layout_height="127dp"
+        android:rotation="38"
+        android:rotationX="33"
+        android:rotationY="27"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button2"
-        app:layout_constraintVertical_bias="0.071"
+        app:layout_constraintVertical_bias="0.533"
         app:srcCompat="@drawable/fone_number_old"
-        tools:layout_editor_absoluteX="6dp" />
+        tools:visibility="visible" />
 
     <EditText
         android:id="@+id/editTextPhone"
@@ -62,35 +68,9 @@
         android:inputType="phone"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintVertical_bias="0.234" />
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="287dp"
-        android:layout_height="43dp"
-        android:layout_marginTop="408dp"
-        android:text="TextView"
-        android:textAlignment="center"
-        android:textColor="#FFFFFF"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button2" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="288dp"
-        android:layout_height="19dp"
-        android:text="Введите имя абонента"
-        android:textAlignment="center"
-        android:textAllCaps="true"
-        android:textColor="#3F51B5"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView"
-        tools:layout_editor_absoluteX="61dp" />
+        tools:layout_editor_absoluteY="533dp" />
 
     <TextView
         android:id="@+id/textView3"
@@ -101,6 +81,47 @@
         android:textAllCaps="true"
         android:textColor="#3F51B5"
         app:layout_constraintBottom_toTopOf="@+id/editTextPhone"
-        tools:layout_editor_absoluteX="87dp" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:layout_constraintVertical_bias="1.0"
+        tools:layout_editor_absoluteX="86dp" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="288dp"
+        android:layout_height="19dp"
+        android:text="Введите имя абонента"
+        android:textAlignment="center"
+        android:textAllCaps="true"
+        android:textColor="#3F51B5"
+        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <EditText
+        android:id="@+id/editTextTextPersonName"
+        android:layout_width="235dp"
+        android:layout_height="51dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:textAlignment="center"
+        android:textAllCaps="true"
+        app:layout_constraintBottom_toTopOf="@+id/textView3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button2" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="300dp"
+        android:layout_height="26dp"
+        android:layout_marginTop="16dp"
+        android:text="Експерементальная Телефонная Книга"
+        android:textAlignment="center"
+        android:textColor="#6017E1"
+        app:layout_constraintBottom_toTopOf="@+id/button2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
